[project]
name = "langgraph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "google-generativeai>=0.8.6",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-google-genai>=4.2.5",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.6",
    "langsmith[claude-agent-sdk]>=0.9.1",
    "notebook>=7.6.0",
    "python-dotenv>=1.2.2",
]
